# cobblepot

./: .gitignore  .rules  Cargo.toml  Program.cs  README.md  cobblepot.csproj  cobblepot.sln  next.config.js  package.json  personal-accounting-tool.csproj  rustfmt.toml  tailwind.config.js  tsconfig.json
.github/workflows/: build.yaml  test.yml
Accounting/: Formats.cs
Cobblepot_Store/: chart_of_accounts.json
Config/: Global.cs  Vault.cs
Controllers/: Cli.cs
Controllers/Commands/: Account.cs  Config.cs  New.cs  View.cs
Controllers/Schemas/: Formatting.cs
Controllers/Structure/: Account.cs  Journal.cs  Ledger.cs
Controllers/VaultAccess/: AccountDetailFormat.cs  JournalDetail.cs  JournalEntries.cs  JournalFiles.cs
Controllers/VaultAccess/Middleware/: JournalDetail.cs
accounting/: Cargo.toml
accounting/src/: lib.rs
accounting/src/account/: account_type.rs  balance.rs  code.rs  mod.rs
accounting/src/account_manager/: account.rs  account_code.rs  account_type.rs  mod.rs
accounting/src/balance_manager/: rules.rs
accounting/src/single_entry_system/: mod.rs
accounting/src/transaction_manager/: entry.rs  mod.rs  transaction.rs
app/: Cargo.toml
app/src/: config.rs  main.rs
app/src/chart_of_accounts/: account.rs  code.rs  enums.rs  gaap.rs  mod.rs
app/src/config/: config_file.rs  currency.rs  dates.rs  mod.rs  vault.rs
app/src/defaults/: mod.rs  money.rs
cli/: Cargo.toml
cli/src/: create_command.rs  lib.rs  list_command.rs  logger.rs  main.rs  report_command.rs  shared.rs  update_command.rs
cli/src/create_command/: dto.rs
cli/src/list_command/: dto.rs
cli/src/report_command/: balance_sheet.rs  budget.rs  dto.rs
cli/src/update_command/: dto.rs
cli_docs_macro/: Cargo.toml
cli_docs_macro/src/: lib.rs
cobblepot/: Cargo.toml  diesel.toml
cobblepot/migrations/2025-03-25-183519_initial/: down.sql  up.sql
cobblepot/migrations/2025-06-02-191819_recurring/: down.sql  up.sql
cobblepot/migrations/2025-07-18-154255_financial_markets/: down.sql  up.sql
cobblepot/src/: account.rs  cli.rs  config.rs  files.rs  lib.rs  main.rs  schema.rs  shared.rs  test_utils.rs
cobblepot/src/account/: model.rs  service.rs
cobblepot/src/apply/: model.rs  service.rs
cobblepot/src/balance/: model.rs  service.rs
cobblepot/src/chart_of_accounts/: mod.rs  models.rs  store.rs
cobblepot/src/client/: account.rs  balance.rs  balance_sheet.rs  deep_dive.rs  mod.rs  model.rs  reporting.rs  shared.rs
cobblepot/src/cobblepot_core/: mod.rs
cobblepot/src/core/: mod.rs
cobblepot/src/files/: mod.rs
cobblepot/src/financial_market/: model.rs  service.rs
cobblepot/src/infrastructure/: config.rs  database.rs  env.rs  mod.rs
cobblepot/src/recurring_transaction/: mod.rs  model.rs  recurrance.rs  service.rs
cobblepot/src/recurring_transation/: model.rs  recurrance.rs  service.rs
cobblepot/src/report/: model.rs  service.rs
cobblepot_accounting/: Cargo.toml
cobblepot_accounting/src/: account.rs  balance_sheet.rs  codes.rs  journal.rs  journal_entry.rs  lib.rs  money.rs  transaction.rs
cobblepot_cli/: Cargo.toml
cobblepot_cli/src/: add_account_command.rs  add_journal_entry_command.rs  arguments.rs  chart_of_accounts_commands.rs  get_account_balances.rs  lib.rs  main.rs  parsers.rs  utils.rs
cobblepot_cli/src/chart_of_accounts_command/: command.rs  mod.rs  renderer.rs
cobblepot_cli/src/cobblepot_command/: mod.rs
cobblepot_cli/src/commands_args/: chart_of_accounts_command.rs  cobblepot_command.rs  mod.rs
cobblepot_cli/src/shared/: args.rs  chart_account_category.rs  mod.rs  palette.rs  traits.rs
cobblepot_cli/tests/: add_account_integration.rs  shared.rs
cobblepot_core/: Cargo.toml
cobblepot_core/src/: config.rs  error.rs  lib.rs
cobblepot_core/src/chart_of_accounts/: mod.rs
cobblepot_files/: Cargo.toml
cobblepot_files/src/: lib.rs  vault.rs
cobblepot_files/src/csv_store/: balance_sheet.rs  chart_of_accounts.rs  journal.rs  mod.rs  utils.rs
cobblepot_finance/: Cargo.toml
cobblepot_finance/src/: account.rs  code.rs  formula.rs  historical_record.rs  lib.rs  summarizer.rs  summary.rs  transfer.rs
cobblepot_finance/src/currency/: iso.rs  mod.rs
cobblepot_finance/src/report/: balance_sheet.rs  cash_flow_statement.rs  mod.rs  profit_loss_statement.rs  summarizer.rs
cobblepot_finance/src/scenario/: debt_repayment.rs  emergency_fund.rs  income_volatility.rs  major_purchase.rs  mod.rs
cobblepot_journal/: Cargo.toml
cobblepot_journal/src/journal/: mod.rs
cobblepot_orm/: .env  Cargo.toml  diesel.toml  test_cobblepot_vault.sqlite
cobblepot_orm/migrations/2024-06-17-032348_create_chart_of_accounts/: down.sql  up.sql
cobblepot_orm/migrations/2024-06-17-203849_create_journal/: down.sql  up.sql
cobblepot_orm/migrations/2024-06-18-184805_create_balance_sheet/: up.sql
cobblepot_orm/src/: crud.rs  lib.rs  models.rs  schema.rs
cobblepot_orm/src/crud/: account_service.rs  (+1 more)
cobblepot_sqlite/: Cargo.toml
cobblepot_sqlite/src/: seed.rs
core/: Cargo.toml  core.rs
core/src/: environment.rs  error.rs
data_store/: Cargo.toml  copy_sqlite_table.py  data_store.rs  diesel.toml  migrate_data.py  recurrence_rule.rs  schema.rs  seed_test_db.py  unix_timestamp.rs
deprecated/: Command_Index.txt  README.md
financial_markets/: Cargo.toml  financial_markets.rs
financial_markets/src/: lib.rs  serde.rs  url.rs
financial_markets/src/tiingo/: client.rs  model.rs
financial_markets/tiingo/: client.rs  model.rs
prisma/: schema.prisma
src/: Program.cs  cobblepot.csproj  cobblepot_settings.json  globals.css
src/BuildingBlocks/: BuildingBlocks.csproj
src/Commands/: AddNoteCommand.cs  AddTransactionCommand.cs  BranchCommand.cs  CheckoutCommand.cs  CloseCommand.cs  NewBalanceCommand.cs  NewCloseCommand.cs  NewCommand.cs  NewEntryCommand.cs  NewNoteCommand.cs  NewOpenCommand.cs  OpenCommand.cs  ReportCommand.cs
src/Config/: CobblepotFiles.cs  Vault.cs
src/Services/: Dates.cs  VaultBranch.cs
src/pages/: _app.tsx  index.tsx
src/styles/: Menu.module.scss  _constants.scss  globals.scss
test/: test.csproj  tests.sh
(+240 files in other folders)
