[workspace]
members = ["cli", "core", "data_store", "financial_markets"]
resolver = "3"

[workspace.package]
version = "0.2.1"
description = "Cobblepot: A self-hosted personal finance server & CLI for tracking accounts, balances, reports, and recurring transactions."
edition = "2024"
authors = ["Cesar Diaz"]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.4"
derive_more = { version = "2.0.1", features = ["display", "error"] }
diesel = { version = "2.2.10", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
env_logger = "0.11.8"
log = "0.4.27"
num_enum = "0.7.4"
rrule = "0.14.0"
serde_json = "1.0.140"
fastrand = "2.3.0"
thiserror = "2.0.17"
rustix = { version = "1", features = ["termios", "std"] }

cobblepot_core = { path = "core" }
cobblepot_financial_markets = { path = "financial_markets" }
cobblepot_data_store = { path = "data_store" }
