[package]
name = "cobblepot"
version = "0.2.0"
description = "Cobblepot is a command-line personal finance tool designed to empower users with a streamlined, efficient way to manage their financial data"
edition = "2024"
authors = ["Cesar Diaz"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["cargo", "string"] }
diesel = { version = "2.2.10", features = [
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.29.0", features = ["bundled"] }
rrule = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }

[dependencies.cli_docs_macro]
path = "../cli_docs_macro"
