[package]
name = "cobblepot"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies.cobblepot_core]
path = "../core/"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display", "error"] }
diesel = { version = "2.2.10", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel_migrations = "2.2.0"
env_logger = "0.11.8"
log = "0.4.27"
rrule = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
fastrand = "2.3.0"
serde_urlencoded = "0.7"
