[package]
name = "cobblepot"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cobblepot_core = { workspace = true }
cobblepot_financial_markets = { workspace = true }

actix-web.workspace = true
chrono.workspace = true
derive_more.workspace = true

diesel.workspace = true
diesel_migrations.workspace = true
env_logger.workspace = true
log.workspace = true
num_enum.workspace = true
rrule.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
fastrand.workspace = true
serde_urlencoded.workspace = true
