[package]
name = "cobblepot_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cobblepot_accounting = { version = "0.1.0", path = "../cobblepot_accounting" }
cobblepot_core = { version = "0.1.0", path = "../cobblepot_core" }
cobblepot_files = { version = "0.1.0", path = "../cobblepot_files" }
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
rusty-money = "0.4.1"
