[package]
name = "cobblepot_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cobblepot_accounting = { version = "0.1.0", path = "../cobblepot_accounting" }
cobblepot_core = { version = "0.1.0", path = "../cobblepot_core" }
rusty-money = "0.4.1"
serde_json = "1.0.117"
