[package]
name = "cobblepot_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobblepot_accounting = { version = "0.1.0", path = "../cobblepot_accounting" }
cobblepot_core = { version = "0.1.0", path = "../cobblepot_core" }
csv = "1.3.0"
directories = "5.0.1"
