[package]
name = "cobblepot_core"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
actix-web.workspace = true
log.workspace = true
diesel.workspace = true
derive_more.workspace = true
reqwest.workspace = true
serde_json.workspace = true
rrule.workspace = true
r2d2.workspace = true
