[package]
name = "cobblepot_financial_markets"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "financial_markets.rs"

[dependencies]
cobblepot_core = { workspace = true }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
url.workspace = true
